styles/style.css
/*
  1. Use a more-intuitive box-sizing model.
*/
*,
*::before,
*::after {
  box-sizing: border-box;
}
/*
    2. Remove default margin
  */
* {
  margin: 0;
}
/*
    3. Allow percentage-based heights in the application
  */
html,
body {
  font-family: Inter;
  height: 100%;
}
/*
    Typographic tweaks!
    4. Add accessible line-height
    5. Improve text rendering
  */
body {
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
}
/*
    6. Improve media defaults
  */
img,
picture,
video,
canvas,
svg {
  display: block;
  max-width: 100%;
}
/*
    7. Remove built-in form typography styles
  */
input,
button,
textarea,
select {
  font: inherit;
}
/*
    8. Avoid text overflows
  */
p,
h1,
h2,
h3,
h4,
h5,
h6 {
  overflow-wrap: break-word;
}
/*
    9. Create a root stacking context
  */
#root,
#__next {
  isolation: isolate;
}

#game_frame {
  height: 50vh;
  width: 100%;
}

#chat_input {
  width: 100%;
  border: 1px solid black;
  padding: 5px;
}

#chat_input:empty::before {
  content: attr(data-placeholder);
  color: #a2acb4;
  pointer-events: none;
}

#header {
  display: flex;
  justify-content: space-between;
}

#title {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

#app {
  display: grid;
}

#game {
  grid-area: 1/1;
}

#view {
  overflow: auto;
  /* do math here */
  max-height: calc(100vh - 48px - 100vw - 100px);
}

#chat_area {
  grid-area: 2/1;
}

#chat_input_wrapper {
  width: 100%;
  display: flex;
  background: white;
}

/* https://stackoverflow.com/questions/71154905/css-for-chat-room-speech-bubble-position */

#chat_log {
  display: flex;
  flex-direction: column;
  margin: auto;
  --rad: 0px;
  --rad-sm: 0px;
}

.message_bubble {
  width: fit-content;
  max-width: 80%;
  margin: 2px;
  padding-left: 4px;
  padding-right: 4px;
  border-radius: var(--rad-sm) var(--rad) var(--rad) var(--rad-sm);
}

.other_message {
  background-color: rgb(235, 235, 235);
  margin-right: auto;
}

.self_message {
  background: linear-gradient(30deg, #bec2ee, #a3f8ed);
  margin-left: auto;
  border-radius: var(--rad) var(--rad-sm) var(--rad-sm) var(--rad);
}

@media (min-width: 600px) {
  #view {
    max-height: 25vh;
  }
}

